tests/specs/ecosystem/vicary/fresh_graphql/0_2_2.test
vicary/fresh-graphql/0.2.2
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:@graphql-tools/schema@^10.0.3": "npm:@graphql-tools/schema@10.0.3_graphql@16.8.1",
      "npm:@graphql-tools/utils@^10.1.0": "npm:@graphql-tools/utils@10.2.0_graphql@16.8.1",
      "npm:graphql@^16.8.1": "npm:graphql@16.8.1"
    },
    "npm": {
      "@graphql-tools/merge@9.0.4_graphql@16.8.1": {
        "integrity": "sha512-MivbDLUQ+4Q8G/Hp/9V72hbn810IJDEZQ57F01sHnlrrijyadibfVhaQfW/pNH+9T/l8ySZpaR/DpL5i+ruZ+g==",
        "dependencies": {
          "@graphql-tools/utils": "@graphql-tools/utils@10.2.0_graphql@16.8.1",
          "graphql": "graphql@16.8.1",
          "tslib": "tslib@2.6.2"
        }
      },
      "@graphql-tools/schema@10.0.3_graphql@16.8.1": {
        "integrity": "sha512-p28Oh9EcOna6i0yLaCFOnkcBDQECVf3SCexT6ktb86QNj9idnkhI+tCxnwZDh58Qvjd2nURdkbevvoZkvxzCog==",
        "dependencies": {
          "@graphql-tools/merge": "@graphql-tools/merge@9.0.4_graphql@16.8.1",
          "@graphql-tools/utils": "@graphql-tools/utils@10.2.0_graphql@16.8.1",
          "graphql": "graphql@16.8.1",
          "tslib": "tslib@2.6.2",
          "value-or-promise": "value-or-promise@1.0.12"
        }
      },
      "@graphql-tools/utils@10.2.0_graphql@16.8.1": {
        "integrity": "sha512-HYV7dO6pNA2nGKawygaBpk8y+vXOUjjzzO43W/Kb7EPRmXUEQKjHxPYRvQbiF72u1N3XxwGK5jnnFk9WVhUwYw==",
        "dependencies": {
          "@graphql-typed-document-node/core": "@graphql-typed-document-node/core@3.2.0_graphql@16.8.1",
          "cross-inspect": "cross-inspect@1.0.0",
          "dset": "dset@3.1.3",
          "graphql": "graphql@16.8.1",
          "tslib": "tslib@2.6.2"
        }
      },
      "@graphql-typed-document-node/core@3.2.0_graphql@16.8.1": {
        "integrity": "sha512-mB9oAsNCm9aM3/SOv4YtBMqZbYj10R7dkq8byBqxGY/ncFwhf2oQzMV+LCRlWoDSEBJ3COiR1yeDvMtsoOsuFQ==",
        "dependencies": {
          "graphql": "graphql@16.8.1"
        }
      },
      "cross-inspect@1.0.0": {
        "integrity": "sha512-4PFfn4b5ZN6FMNGSZlyb7wUhuN8wvj8t/VQHZdM4JsDcruGJ8L2kf9zao98QIrBPFCpdk27qst/AGTl7pL3ypQ==",
        "dependencies": {
          "tslib": "tslib@2.6.2"
        }
      },
      "dset@3.1.3": {
        "integrity": "sha512-20TuZZHCEZ2O71q9/+8BwKwZ0QtD9D8ObhrihJPr+vLLYlSuAU3/zL4cSlgbfeoGHTjCSJBa7NGcrF9/Bx/WJQ==",
        "dependencies": {}
      },
      "graphql@16.8.1": {
        "integrity": "sha512-59LZHPdGZVh695Ud9lRzPBVTtlX9ZCV150Er2W43ro37wVof0ctenSaskPPjN7lVTIN8mSZt8PHUNKZuNQUuxw==",
        "dependencies": {}
      },
      "tslib@2.6.2": {
        "integrity": "sha512-AEYxH93jGFPn/a2iVAwW87VuUIkR1FVUKB77NwMF7nBTDkDrrT/Hpt/IrCJ0QXhW27jTBDcf5ZY7w6RiqTMw2Q==",
        "dependencies": {}
      },
      "value-or-promise@1.0.12": {
        "integrity": "sha512-Z6Uz+TYwEqE7ZN50gwn+1LCVo9ZVrpxRPOhOLnncYkY1ZzOYtrX8Fwf/rFktZ8R5mJms6EZf5TqNOMeZmnPq9Q==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: Uncaught Error: Unable to load <global_npm_dir>/@graphql-tools/utils/10.2.0/typings/index.d.ts: The system cannot find the file specified. (os error 2)
    at Object.getSourceFile (ext:deno_tsc/99_main_compiler.js:635:28)
    at findSourceFileWorker (ext:deno_tsc/00_typescript.js:122523:25)
    at findSourceFile (ext:deno_tsc/00_typescript.js:122442:22)
    at processImportedModules (ext:deno_tsc/00_typescript.js:122873:13)
    at findSourceFileWorker (ext:deno_tsc/00_typescript.js:122578:9)
    at findSourceFile (ext:deno_tsc/00_typescript.js:122442:22)
    at processImportedModules (ext:deno_tsc/00_typescript.js:122873:13)
    at findSourceFileWorker (ext:deno_tsc/00_typescript.js:122578:9)
    at findSourceFile (ext:deno_tsc/00_typescript.js:122442:22)
    at processImportedModules (ext:deno_tsc/00_typescript.js:122873:13)

